<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_interfaces</name>
  <version>0.0.0</version>
  <description>A message interface with fields for robot status.</description>
  <maintainer email="ntiajubukason@gmail.com">Ntiaju Chukwuebuka Eric</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>  <!--Required for message generation--> 
  <exec_depend>rosidl_default_runtime</exec_depend> <!--For runtime support of generated interfaces-->
  <member_of_group>rosidl_interface_packages</member_of_group>  <!--Required for custom interfaces--> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
